[package]
name = "cpa-interactions-provider"
version = "0.1.0"
edition = "2021"
authors = ["AI-Trash"]
description = "CLIProxyAPI plugin exposing Gemini Interactions API behind an OpenAI Chat Completions endpoint"
license = "MIT"
repository = "https://github.com/AI-Trash/cpa-interactions-provider"

[lib]
name = "cpa_interactions_provider"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true